# vae-fdm

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark_architectures.py  reproduce_paper.py  validation_suite.py  verify_all.py
examples/: 01_train_shell.py  03_gnn_encoder.py
scripts/: gnn_bezier.yml  interactive_designer.py  optimize.py  variational_bezier.yml
src/neural_fdm/: __init__.py  builders.py  disclaimer.py  export.py  gnn.py  graph.py  helpers.py  losses.py  mesh.py  models.py  plotting.py  serialization.py  training.py  variational.py
src/neural_fdm/generators/: __init__.py  bezier.py  generator.py  generator_bezier.py  grids.py  tubes.py
src/neural_fdm/interop/: __init__.py  api.py
tests/: conftest.py  test_gnn.py  test_helpers.py  test_losses.py  test_models.py  test_serialization.py  test_training.py  test_vae_loss.py  test_variational.py
web/: Dockerfile  README.md  app.py  requirements.txt
web/static/: index.html
web/static/css/: style.css
web/static/js/: api-client.js  colormap.js  main.js  mesh-renderer.js
